# ddns-server

./: Dockerfile  README.md  api.py  entrypoint.sh  named.conf  pyproject.toml  setup.sh
ddns-api/: api.py  requirements.txt  wsgi.py
